<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">BeBoggled</string>
    <string name="hello_world">Have fun with Boggle!</string>
    <string name="action_settings">Settings</string>
    <string name="scorestringtxt">Score </string>
    <string name="scorestringtxt1">Your Score </string>
    <string name="scorestringtxt2">Opponent Score </string>
    <string name="roundtxt">Round  </string>
    <string name="countdown">Countdown </string>
    <string name="exit">Exit</string>
    <string name="submit">Submit</string>
    <string name="shake">Shake To Begin</string>
    <string name="single_mode">Play Single</string>
    <string name="double_mode">Play Opponent</string>
    <string name="double_modeCT">Play Cut Throat</string>
    <string name="yourwords">Your\'s: </string>
    <string name="oppwords">Opponent\'s: </string>

    <!-- BluetoothChat -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected to <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">not connected</string>

    <!-- DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="secure_connect">Connect a device - Secure</string>
    <string name="insecure_connect">Connect a device - Insecure</string>
    <string name="discoverable">Make discoverable</string>
    <string name="title_activity_scorecard">Scorecard</string>

</resources>
